# AdventOfCode

./: .gitignore  .gitmodules  README.md  build_genericlib.sh  run_aoc_day.sh  run_aoc_year.sh
2015/: CMakeLists.txt
2015/Common/: CMakeLists.txt  inputfile.cpp  inputfile.hpp  stringoperations.cpp  stringoperations.hpp  vectoroperations.cpp  vectoroperations.hpp
2015/Day01/: CMakeLists.txt  day1.cpp
2015/Day02/: CMakeLists.txt  day2.cpp
2015/Day03/: CMakeLists.txt  day3.cpp
2015/Day04/: CMakeLists.txt  day4.cpp  md5.cpp
2015/Day05/: day5.cpp  (+1 more)
2020/: CMakeLists.txt
2021/: CMakeLists.txt
2023/: CMakeLists.txt
2023/Day01/: main.cpp
2023/Day02/: main.cpp
2023/Day03/: main.cpp
2023/Day04/: CMakeLists.txt  main.cpp
2023/Day05/: main.cpp
2023/Day06/: main.cpp
2023/Day07/: CMakeLists.txt  main.cpp
2023/Day08/: main.cpp
2023/Day09/: main.cpp
2023/Day11/: main.cpp
2023/Day13/: main.cpp
2023/Day14/: main.cpp
2023/Day15/: CMakeLists.txt  main.cpp
2023/Day16/: main.cpp
2023/Day17/: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt
2024/day01/: CMakeLists.txt  main.cpp
2024/day02/: CMakeLists.txt  main.cpp
2024/day03/: CMakeLists.txt  main.cpp
2024/day04/: main.cpp
2024/day05/: main.cpp
2024/day06/: CMakeLists.txt  main.cpp
2024/day07/: main.cpp
2024/day08/: main.cpp
2024/day09/: CMakeLists.txt  main.cpp
2024/day10/: CMakeLists.txt  main.cpp
2024/day11/: main.cpp
2024/day12/: main.cpp
2024/day13/: CMakeLists.txt  main.cpp
2024/day14/: CMakeLists.txt  main.cpp
2024/day15/: main.cpp
2024/day16/: CMakeLists.txt  main.cpp
2024/day17/: main.cpp
2024/day18/: CMakeLists.txt  main.cpp
2024/day19/: CMakeLists.txt  main.cpp
2024/day20/: CMakeLists.txt  main.cpp
2024/day21/: CMakeLists.txt  main.cpp
2024/day22/: CMakeLists.txt  main.cpp
2024/day23/: CMakeLists.txt  main.cpp
2024/day24/: CMakeLists.txt  main.cpp
2024/day25/: CMakeLists.txt  main.cpp
2025/: CMakeLists.txt
2025/day01/: main.cpp
2025/day02/: main.cpp
2025/day03/: main.cpp
2025/day04/: main.cpp
2025/day05/: CMakeLists.txt  main.cpp
2025/day06/: main.cpp
2025/day08/: CMakeLists.txt  main.cpp
2025/day09/: main.cpp
2025/day11/: CMakeLists.txt  main.cpp
2025/day12/: CMakeLists.txt  main.cpp
GenericLib/: CMakeLists.txt
GenericLib/include/: FileHandler.hpp  StringParser.hpp
GenericLib/src/: FileHandler.cpp  StringParser.cpp
(+210 files in other folders)
